--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnakeGame</title>
+
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
-    <canvas id="stage" width="400" height="400"></canvas>
+    <h1>Snakegame</h1>
+
+    <canvas id="stage" width="625" height="625"></canvas>
 
     <script src="js/index.js"></script>
 
