--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SnakeGame</title>
 
+    <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <h1>Snakegame</h1>
+    <h3>
+        Press 
+        <i class="far fa-caret-square-left"></i> 
+        <i class="far fa-caret-square-up"></i> 
+        <i class="far fa-caret-square-right"></i> 
+        <i class="far fa-caret-square-down"></i> 
+        Buttons to start playing the game. :)
+    </h3>
 
     <canvas id="stage" width="625" height="625"></canvas>
 
