--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         Buttons to start playing the game. :)
     </h3>
 
+    <span id="best">Best: <strong>0</strong></span>
+    <span id="points">Points: <strong>0</strong></span>
+
     <canvas id="stage" width="625" height="625"></canvas>
 
     <script src="js/index.js"></script>
