--- a/index.html
+++ b/index.html
@@ -9,20 +9,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Snakegame</h1>
-    <h3>
-        Press 
-        <i class="far fa-caret-square-left"></i> 
-        <i class="far fa-caret-square-up"></i> 
-        <i class="far fa-caret-square-right"></i> 
-        <i class="far fa-caret-square-down"></i> 
-        Buttons to start playing the game. :)
-    </h3>
+    <header>
+        <h1>Snakegame</h1>
 
-    <span id="best">Best: <strong>0</strong></span>
-    <span id="points">Points: <strong>0</strong></span>
+        <h3>
+            Press 
+            <i class="far fa-caret-square-left"></i> 
+            <i class="far fa-caret-square-up"></i> 
+            <i class="far fa-caret-square-right"></i> 
+            <i class="far fa-caret-square-down"></i> 
+            Buttons to start playing the game. :)
+        </h3>
 
-    <canvas id="stage" width="625" height="625"></canvas>
+        <span id="best">Best: <strong>0</strong></span>
+        <span id="points">Points: <strong>0</strong></span>
+    </header>
+
+    <canvas id="stage"></canvas>
 
     <script src="js/index.js"></script>
 
