--- a/index.html
+++ b/index.html
@@ -12,13 +12,17 @@
     <header>
         <h1>Snakegame</h1>
 
-        <h3>
+        <h3 class="desktop-explanation">
             Press 
             <i class="far fa-caret-square-left"></i> 
             <i class="far fa-caret-square-up"></i> 
             <i class="far fa-caret-square-right"></i> 
             <i class="far fa-caret-square-down"></i> 
             Buttons to start playing the game. :)
+        </h3>
+
+        <h3 class="mobile-explanation">
+            Swipe to start playing the game. :)
         </h3>
 
         <span id="best">Best: <strong>0</strong></span>
