--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SnakeGame</title>
-
-    <link rel="stylesheet" href="css/fontawesome.css">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.0/css/all.css" integrity="sha384-eLT4eRYPHTmTsFGFAzjcCWX+wHfUInVWNm9YnwpiatljsZOwXtwV2Hh6sHM6zZD9" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@100;200;300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
+
+    <title>SnakeGame</title>
 </head>
 <body>
     <header>
@@ -31,7 +35,7 @@
 
     <canvas id="stage"></canvas>
 
-    <script src="js/index.js"></script>
+    <script src="js/scripts.js"></script>
 
 </body>
 </html>
