Changed title and added credits

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
     <header>
-        <h1>Snakegame</h1>
+        <h1>SnakeGame</h1>
+        <h2>Created by <a href="https://danilonakai.com/" target="_blank">Danilo Nakai</a>.</h2>
 
         <h3 class="desktop-explanation">
             Press 
